query fix and test for fetch account by account id
