# openapi/openapi.yaml
@@ -70,6 +70,13 @@ paths:
         - account
       description: List accounts
       operationId: listAccounts
+      parameters:
+        - name: Authorization
+          in: header
+          description: Bearer JWT
+          required: true
+          schema:
+            type: string
       security:
         - bearerAuth: []
       responses:
@@ -105,6 +112,12 @@ paths:
           schema:
             type: string
             pattern: ^01\d{6}$
+        - name: Authorization
+          in: header
+          description: Bearer JWT
+          required: true
+          schema:
+            type: string
       security:
         - bearerAuth: []
       responses:
